--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
+    "axios": "^1.13.2",
     "firebase": "^12.5.0",
     "flowbite": "^3.1.2",
     "lucide-react": "^0.553.0",
